Fixed pre tag overflow

--- a/_sass/freshbrewed/_base.scss
+++ b/_sass/freshbrewed/_base.scss
@@ -79,4 +79,7 @@ pre {
     color: #c7c2af;
     padding: $spacing-unit;
     box-shadow: 0 0 4px black inset;
+    width: 100%;
+    box-sizing: border-box;
+    overflow-x: auto;
 }
